# flask_todo

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_tasks.py
todo/: __init__.py  auth.py  db.py  schema.sql  tasks.py
todo/static/: due_date_switch.js  table_select.js
todo/templates/: base.html  navbar.html
todo/templates/auth/: login.html  register.html
todo/templates/tasks/: create.html  index.html  tables.html  update.html
